# NYC-Taxi-Fare-Prediction-ML-System

./: .gitignore  LICENSE  README.md  colab_run.ipynb  pyproject.toml
config/: local.yml
notebook/: eda.ipynb
src/common/: pipeline.py
src/pipelines/: inference.py  training.py
src/serving/: api.py  download_model.py  frontend.py
